apps/versions/istio/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-demo-v1
spec:
  gateways:
  - bookinfo-gateway
  hosts:
  - versions
  http:
  - route:
    - destination:
        host: version1.istio-demo.svc.cluster.local
        subset: v1
      weight: 75
    - destination:
        host: version2.istio-demo.svc.cluster.local
        subset: v2
      weight: 25
